Chrome spacing fixes for empty goals

--- a/resources/sass/goals.scss
+++ b/resources/sass/goals.scss
@@ -127,16 +127,26 @@ div.app-container
             max-width: 32.5%;
         }
 
+        img.empty
+        {
+            padding: 25px;
+            padding-left: 50px;
+
+            @media only screen and (max-width: 420px)
+            {
+                padding-left: 25px;
+            }
+
+            @media only screen and (max-width: 420px)
+            {
+                max-width: 30%;
+            }
+        }
+
         &.empty
         {
             align-self: flex-start;
             border-style: dashed;
-            
-            img.goal-img
-            {
-                padding: 25px;
-                padding-left: 50px;
-            }
         }
 
         a
